--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,23 +1,23 @@
 [versions]
 agp = "8.13.2"
 androidDesugarJdkLibs = "2.1.5"
-kotlin = "2.2.21"
+kotlin = "2.3.0"
 ksp = "2.3.1"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.10.0"
-activityCompose = "1.12.1"
-androidxComposeBom = "2025.12.00"
-androidxComposeFoundation = "1.10.0"
+activityCompose = "1.12.2"
+androidxComposeBom = "2026.01.00"
+androidxComposeFoundation = "1.10.1"
 androidxComposeMaterial3Adaptive = "1.2.0"
 appcompat = "1.7.1"
 material = "1.13.0"
-jetbrainsKotlinJvm = "2.2.21"
-firebaseBom = "34.6.0"
+jetbrainsKotlinJvm = "2.3.0"
+firebaseBom = "34.8.0"
 firebasePerfPlugin = "2.0.2"
-hilt = "2.57.2"
+hilt = "2.58"
 hiltExt = "1.3.0"
 androidxHiltLifecycleViewModelCompose = "1.3.0"
 navigation3 = "1.0.0"
@@ -28,6 +28,8 @@ materialVersion = "1.13.0"
 apollo = "4.3.3"
 okhttp = "5.3.2"
 chucker = "4.2.0"
+ui = "1.10.1"
+coil = "3.3.0"
 
 [libraries]
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
@@ -94,6 +96,10 @@ okhttp-core = { group = "com.squareup.okhttp3", name = "okhttp" }
 okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor" }
 chucker-release = { group = "com.github.chuckerteam.chucker", name = "library-no-op", version.ref = "chucker" }
 chucker-debug = { group = "com.github.chuckerteam.chucker", name = "library", version.ref = "chucker" }
+androidx-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "ui" }
+
+coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
+coil-network = { group = "io.coil-kt.coil3", name = "coil-network-okhttp", version.ref = "coil" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
